Fix buttons and gap

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-  height: 60vh;
+  height: 50vh;
   padding-top: 7rem;
   overflow: hidden;
 }
