--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ h1 {
 }
 
 section {
-  margin-top: 6rem;
+  margin-top: 5rem;
   padding-top: 4rem;
 }
 
